[gd_scene load_steps=16 format=2]

[ext_resource path="res://Trade/Trade.gd" type="Script" id=1]
[ext_resource path="res://Trade/UI/InventoryDlg.tscn" type="PackedScene" id=2]
[ext_resource path="res://Trade/UI/ShopDlg.tscn" type="PackedScene" id=3]
[ext_resource path="res://Trade/World.tscn" type="PackedScene" id=4]
[ext_resource path="res://Trade/Root.gd" type="Script" id=5]
[ext_resource path="res://Trade/UI/SiteList.gd" type="Script" id=6]
[ext_resource path="res://Trade/Trader.tscn" type="PackedScene" id=7]
[ext_resource path="res://NixLib/BehaviorTree/BehaviorTree/BT_Selector.gd" type="Script" id=8]
[ext_resource path="res://NixLib/BehaviorTree/BehaviorTree/BehaviorTreeRoot.gd" type="Script" id=9]
[ext_resource path="res://Trade/AI/AI.gd" type="Script" id=10]
[ext_resource path="res://NixLib/BehaviorTree/BehaviorTree/BehaviorLeaf.gd" type="Script" id=11]
[ext_resource path="res://Trade/AI/Action/Purchase.gd" type="Script" id=12]
[ext_resource path="res://Trade/AI/Condition/WantPurchase.gd" type="Script" id=13]
[ext_resource path="res://Trade/AI/Action/Sale.gd" type="Script" id=14]
[ext_resource path="res://Trade/Image/Default/compass.png" type="Texture" id=15]

[node name="Trade" type="Node"]
script = ExtResource( 1 )

[node name="World" parent="." instance=ExtResource( 4 )]

[node name="compass" type="Sprite" parent="World"]
position = Vector2( 65.0121, 69.2052 )
texture = ExtResource( 15 )

[node name="Avatar" type="Node2D" parent="."]

[node name="Trader" parent="Avatar" instance=ExtResource( 7 )]

[node name="Camera2D" type="Camera2D" parent="Avatar/Trader"]
current = true
zoom = Vector2( 3, 3 )
smoothing_enabled = true

[node name="Trader" parent="." instance=ExtResource( 7 )]

[node name="AI" type="Node" parent="Trader"]
script = ExtResource( 10 )

[node name="BehaviorTreeRoot" type="Node" parent="Trader/AI"]
script = ExtResource( 9 )

[node name="BT_Selector" type="Node" parent="Trader/AI/BehaviorTreeRoot"]
script = ExtResource( 8 )

[node name="BehaviorLeaf" type="Node" parent="Trader/AI/BehaviorTreeRoot/BT_Selector"]
script = ExtResource( 11 )
conditionScript = ExtResource( 13 )
actionScript = ExtResource( 12 )

[node name="BehaviorLeaf2" type="Node" parent="Trader/AI/BehaviorTreeRoot/BT_Selector"]
script = ExtResource( 11 )
actionScript = ExtResource( 14 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Root" type="VBoxContainer" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/Root"]
margin_right = 1024.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/Root"]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 576.0
size_flags_vertical = 3

[node name="SiteInfo" type="Label" parent="HUD/Root/HBoxContainer"]
margin_top = 272.0
margin_right = 1024.0
margin_bottom = 286.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopDlg" parent="HUD/Root/HBoxContainer" instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 214.0
margin_right = 424.0
margin_bottom = 438.0
size_flags_horizontal = 3

[node name="InventoryDlg" parent="HUD/Root/HBoxContainer" instance=ExtResource( 2 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 322.0
margin_right = 640.0
margin_bottom = 438.0
size_flags_horizontal = 3

[node name="Menu" type="HBoxContainer" parent="HUD/Root"]
margin_top = 580.0
margin_right = 1024.0
margin_bottom = 600.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Move" type="Button" parent="HUD/Root/Menu"]
margin_left = 849.0
margin_right = 896.0
margin_bottom = 20.0
text = "Move"

[node name="Trade" type="Button" parent="HUD/Root/Menu"]
margin_left = 900.0
margin_right = 947.0
margin_bottom = 20.0
text = "Trade"

[node name="Inventory" type="Button" parent="HUD/Root/Menu"]
margin_left = 951.0
margin_right = 1024.0
margin_bottom = 20.0
text = "Inventory"

[node name="Test" type="Button" parent="HUD"]
margin_right = 12.0
margin_bottom = 20.0
text = "Test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SiteList" type="ItemList" parent="CanvasLayer"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -120.0
margin_right = 182.0
margin_bottom = 120.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="finish" from="Trader/AI/BehaviorTreeRoot" to="Trader/AI" method="_on_BehaviorTreeRoot_finish"]
[connection signal="buy" from="HUD/Root/HBoxContainer/ShopDlg" to="." method="_on_ShopDlg_buy"]
[connection signal="sell" from="HUD/Root/HBoxContainer/InventoryDlg" to="." method="_on_InventoryDlg_sell"]
[connection signal="pressed" from="HUD/Root/Menu/Move" to="." method="_on_Move_pressed"]
[connection signal="pressed" from="HUD/Root/Menu/Trade" to="." method="_on_Shop_pressed"]
[connection signal="pressed" from="HUD/Root/Menu/Inventory" to="." method="_on_Inventory_pressed"]
[connection signal="item_activated" from="CanvasLayer/SiteList" to="." method="_on_SiteList_item_activated"]
[connection signal="item_selected" from="CanvasLayer/SiteList" to="." method="_on_SiteList_item_selected"]
